update endpoint to GET index status and update index, search tests to include getting index creation status

--- a/ui/index.html
+++ b/ui/index.html
@@ -38,6 +38,12 @@
                     </div>
                     <button id="index-btn">Index</button>
                 </div>
+                <div id="index-progress-container" class="progress-container" style="display: none;">
+                    <div class="progress-bar">
+                        <div id="index-progress-bar" class="progress-fill"></div>
+                    </div>
+                    <div id="index-progress-text" class="progress-text">0%</div>
+                </div>
                 <div id="index-status" class="status-message"></div>
             </section>
 
