--- a/ui/index.html
+++ b/ui/index.html
@@ -11,42 +11,10 @@
         <header>
             <h1>Where's That?</h1>
             <p>Local file search engine</p>
+            <button id="index-modal-btn" class="index-modal-btn">Index Files</button>
         </header>
 
         <main>
-            <!-- Index Section -->
-            <section class="index-section">
-                <h2>Index Files</h2>
-                <div class="form-group">
-                    <label for="folder-path">Folder Path:</label>
-                    <div class="path-input-container">
-                        <input type="text" id="folder-path" placeholder="Enter folder path (e.g., /home/user/documents)" required>
-                        <div class="dropdown-container">
-                            <button id="suggestions-btn" type="button" class="suggestions-btn">▼</button>
-                            <div id="suggestions-dropdown" class="suggestions-dropdown">
-                                <div class="dropdown-section">
-                                    <h4>Common Paths</h4>
-                                    <div class="suggestion-item" data-path="/home">Home Directory</div>
-                                    <div class="suggestion-item" data-path="/home/user">Documents</div>
-                                </div>
-                                <div class="dropdown-section" id="recent-paths-section" style="display: none;">
-                                    <h4>Recent Paths</h4>
-                                    <div id="recent-paths-container"></div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <button id="index-btn">Index</button>
-                </div>
-                <div id="index-progress-container" class="progress-container" style="display: none;">
-                    <div class="progress-bar">
-                        <div id="index-progress-bar" class="progress-fill"></div>
-                    </div>
-                    <div id="index-progress-text" class="progress-text">0%</div>
-                </div>
-                <div id="index-status" class="status-message"></div>
-            </section>
-
             <!-- Search Section -->
             <section class="search-section">
                 <h2>Search Files</h2>
@@ -83,6 +51,46 @@
                 </div>
             </section>
         </main>
+    </div>
+
+    <!-- Index Modal -->
+    <div id="index-modal" class="modal">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h2>Index Files</h2>
+                <button class="modal-close" id="modal-close-btn">&times;</button>
+            </div>
+            <div class="modal-body">
+                <div class="form-group">
+                    <label for="folder-path">Folder Path:</label>
+                    <div class="path-input-container">
+                        <input type="text" id="folder-path" placeholder="Enter folder path (e.g., /home/user/documents)" required>
+                        <div class="dropdown-container">
+                            <button id="suggestions-btn" type="button" class="suggestions-btn">▼</button>
+                            <div id="suggestions-dropdown" class="suggestions-dropdown">
+                                <div class="dropdown-section">
+                                    <h4>Common Paths</h4>
+                                    <div class="suggestion-item" data-path="/home">Home Directory</div>
+                                    <div class="suggestion-item" data-path="/home/user">Documents</div>
+                                </div>
+                                <div class="dropdown-section" id="recent-paths-section" style="display: none;">
+                                    <h4>Recent Paths</h4>
+                                    <div id="recent-paths-container"></div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <button id="index-btn">Index</button>
+                </div>
+                <div id="index-progress-container" class="progress-container" style="display: none;">
+                    <div class="progress-bar">
+                        <div id="index-progress-bar" class="progress-fill"></div>
+                    </div>
+                    <div id="index-progress-text" class="progress-text">0%</div>
+                </div>
+                <div id="index-status" class="status-message"></div>
+            </div>
+        </div>
     </div>
 
     <script src="script.js"></script>
