allow specific folders to be excluded from indexing

--- a/ui/index.html
+++ b/ui/index.html
@@ -80,6 +80,15 @@
                             </div>
                         </div>
                     </div>
+                </div>
+                <div class="form-group">
+                    <label for="exclude-folders">Exclude Folders (optional):</label>
+                    <div class="textarea-container">
+                        <textarea id="exclude-folders" placeholder="Enter absolute paths of folders to exclude, comma-separated" rows="4"></textarea>
+                        <small class="help-text">Specify folders to skip during indexing. Use comma-separated full absolute paths.</small>
+                    </div>
+                </div>
+                <div class="form-group">
                     <button id="index-btn">Index</button>
                 </div>
                 <div id="index-progress-container" class="progress-container" style="display: none;">
